--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1746,7 +1746,9 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .project-list { grid-template-columns: repeat(3, 1fr); }
 
-
+  .own { 
+    color: white;
+  }
 
   /**
    * BLOG
